--- a/code/JavaScript/ICS/package.json
+++ b/code/JavaScript/ICS/package.json
@@ -1,7 +1,7 @@
 {
   "name": "JavaScript",
   "version": "1.0.0",
-  "main": "js-1.js",
+  "main": "ICS.js",
   "dependencies": {
     "mocha": "^6.1.4"
   },
