--- a/code/JavaScript/ICS/package.json
+++ b/code/JavaScript/ICS/package.json
@@ -9,7 +9,8 @@
     "linq": "^3.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "run": "node ./ICS.js"
   },
   "keywords": [],
   "author": "",
