--- a/6s/viusal/課題1/課題4/課題4.vcxproj
+++ b/6s/viusal/課題1/課題4/課題4.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{8166F6C6-4717-466D-873B-492C13398807}</ProjectGuid>
     <RootNamespace>課題4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>t4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -115,6 +116,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="function.cpp" />
+    <ClCompile Include="t4.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sample.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
