--- a/6s/ra-men/package.json
+++ b/6s/ra-men/package.json
@@ -38,6 +38,7 @@
     "cache-loader": "^4.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
