--- a/6s/ra-men/package.json
+++ b/6s/ra-men/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-script": "^2.0.5",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "styled-components": "^4.4.1",
     "webpack": "^4.41.2"
